2010-11-24  Daniel Schoepe  <daniel.schoepe@googlemail.com>  (tiny change)

	* gnus-sum.el (gnus-summary-articles-in-thread): Fix a bug that causes
	this function to return incorrect results when calling it with an
	explicit article argument different from
	(gnus-summary-article-number).

2010-11-24  Julien Danjou  <julien@danjou.info>

	* message.el (message-goto-body): Skip <#secure.

	* shr.el (shr-insert-color-overlay): Replace deprecated syntax.
	(shr-tag-body): Add background support.
	(shr-descend): Add background support.
	(shr-tag-title): Add.

	* shr-color.el (shr-color-visible): Really return original background
	if fixed.

2010-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-color-check): Protect against non-existant colour names.

2010-11-24  Julien Danjou  <julien@danjou.info>

	* color-lab.el: Require 'cl when compiling.

	* shr.el (shr-insert-color-overlay): Remove specific rgb() check.

	* shr-color.el (shr-color->hexadecimal): Only return the hexadecimal
	matched part.

	* color-lab.el: Fix all expt calls to use float type.

2010-11-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-insert-color-overlay): Pass rgb(rrr, ggg, bbb) type color
	expression to shr-color-check as is.

	* shr-color.el (shr-color->hexadecimal): Ignore case of color names.

	* color-lab.el: Add coding cookie.
	(float-pi): Use eval-and-compile.

	* dgnushack.el (dgnushack-compile): Exclude shr-color.el from being
	compiled for Emacsen having no `libxml-parse-html-region' support.

2010-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert-color-overlay): Split stuff like
	"#444444 !important" to find the real colour.
	(shr-tag-font): Resurrect shr-tag-font again, since it's needed to
	parse <font color="red"> entries.

2010-11-23  Andrew Cohen  <cohen@andy.bu.edu>

	* nnheader.el (nnheader-parse-head): Bug fix.  Properly position
	point when parsing headers.

	* nnspool.el (nnspool-insert-nov-head): Bug fix.  Make sure point