@@ -1,3 +1,7 @@
+2010-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-parse-style): Drop !important from styles.
+
 2010-11-24  Daniel Schoepe  <daniel.schoepe@googlemail.com>  (tiny change)
 
 	* gnus-sum.el (gnus-summary-articles-in-thread): Fix a bug that causes
